# GF2

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  clear.bat
.github/workflows/: build.yml  coverage.yml  coverity.yml
doc/: .gitignore  CMakeLists.txt  GF2.doxy  GF2.tex
include/: CMakeLists.txt
include/gf2/: buchb.h  defs.h  env.h  func.h  ideal.h  info.h  info.h.in  mi.h  mm.h  mo.h  monom.h  mp.h  mpoly.h  order.h  word.h  ww.h  zz.h
src/: env.cpp
test/: CMakeLists.txt  test.cpp
win/: .gitignore  gf2.sln  test.vcproj
win/vs15/: gf2.sln  test.vcxproj  test.vcxproj.filters
